--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -901,7 +901,8 @@ p{
 }
 .benefits{
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    flex-wrap: wrap;
 
     &__item{
         max-width: 200px;
@@ -944,8 +945,10 @@ a.first-btn{
 }
 .zaim-lime{
     display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
     &__item{
-        max-width: 258px;
+        max-width: 230px;
         margin: 0 20px 20px 20px;
     }
     img{
@@ -982,8 +985,9 @@ a.first-btn{
 }
 .get-many{
     display: flex;
+    flex-wrap: wrap;
     &__item{
-        max-width: 400px;
+        max-width: 350px;
         margin: 0 20px 20px 20px;
     }
 }
@@ -997,7 +1001,7 @@ a.first-btn{
 }
 .zaym-lime{
     display: flex;
-
+    width: 100%;
     position: absolute;
     top: -51px;
     left: -1px;
@@ -1145,6 +1149,7 @@ a.first-btn{
 .footer-bottom{
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
     a{
         color: #97c11f;
         font-weight: 300;
@@ -1156,7 +1161,7 @@ a.first-btn{
     }
     margin: 0 -10px;
     &__item{
-        
+        max-width: 700px;
         
         padding-bottom: 30px;
     }
