--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -1004,7 +1004,7 @@ a.first-btn{
     width: 100%;
     position: absolute;
     top: -51px;
-    left: -1px;
+    left: 0px;
 }
 .main-btn{
     width: 170px;
@@ -1055,6 +1055,26 @@ a.first-btn{
     box-shadow: 0 5px 10px rgba(0,0,0,.2);
     cursor: pointer; 
 }
+
+
+
+
+
+/* calc */
+// .main{
+//     position: relative;
+// }
+// #progressBar{
+//     width: 9%;
+//     height: 6px;
+//     background: #97c11f;
+//     border-radius: 12px;
+//     position: absolute;
+//     top: 0;
+//     left: 0;
+// }
+
+/* calc */
 // </ОСНОВНОЙ БЛОК>----------------------------------------------------------
 
 
