--- a/#source/scss/media.scss
+++ b/#source/scss/media.scss
@@ -66,16 +66,19 @@
 @media (max-width: 930px){
     .main__right{
         top: 120px;
-        height: 65vh;
+        height: 80vh;
         overflow-y: auto;
         
+    }
+    .zaym-lime{
+        top: 0;
     }
     .web-zaym {
         padding-top: 75px;
     }
-    .zaym-head{
-        top: 30px;
-    }
+    // .zaym-head{
+    //     top: 30px;
+    // }
     .online-zaym{
         background-position: 55% center;
     }
@@ -153,6 +156,9 @@
 }
 
 @media (max-width: 640px) {
+    .footer__item{
+        padding-bottom: 0;
+    }
     .wrapper-sum{
         flex-direction: row;
     }
@@ -238,7 +244,7 @@
         align-items: center;
     }
     .slider .slick-arrow{
-        top: 120px;
+        top: 35px;
     }
     .srolles-top {
         right: 10px;
